Increase top navigation icon size and spacing to prevent accidental clicks

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -467,9 +467,9 @@ h6 {
 }
 
 .header-nav .nav-icon {
-  font-size: 22px;
+  font-size: 28px;
   color: #012970;
-  margin-right: 25px;
+  margin-right: 35px;
   position: relative;
 }
 
