--- a/public/assets/scss/_header.scss
+++ b/public/assets/scss/_header.scss
@@ -111,9 +111,9 @@
   }
 
   .nav-icon {
-    font-size: 22px;
+    font-size: 28px;
     color: $secondary;
-    margin-right: 25px;
+    margin-right: 35px;
     position: relative;
   }
 
